<resources>
    <string name="app_name">CRUD-TASKAPP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_email_login">Email</string>
    <string name="hint_email_login">Digite seu email</string>
    <string name="text_login_password">Senha</string>
    <string name="hint_login_password">Digite sua senha</string>
    <string name="text_button_login">Login</string>
    <string name="text_esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="text_create_account">Crie sua conta</string>
    <string name="create_account">Criar conta</string>
    <string name="recover_email">Enviar email</string>
    <string name="text_recover_mensage">Digite seu email para que possamos enviar um email de alteração de senha!</string>
    <string name="btn_logout">Deslogar\n</string>
    <string name="tab_todo">A Fazer</string>
    <string name="tab_doing">Fazendo</string>
    <string name="tab_done">Feitos</string>
    <string name="task_desc">Add task</string>
    <string name="newtask_text_task">Tarefa</string>
    <string name="newtask_hint">ex: Ir ao medico as 14:00</string>
    <string name="newtask_create">Criar Tarefa</string>
    <string name="recover_account">Recuperar Conta</string>
    <string name="error_email_empty">Digite um email antes</string>
    <string name="error_password_empty">Digite uma senha antes</string>
    <string name="error_newtask_empty">Digite uma tarefa antes</string>
    <string name="warning">Atenção</string>
    <string name="bottomsheet_accept">Entendi</string>
    <string name="error_generic">Ops... algo deu errado!</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum sagittis nisl, et lacinia neque pretium quis.</string>
    <string name="msg_logout">Você está saindo do aplicativo, deseja prosseguir?</string>
    <string name="btn_exit">Sair</string>
    <string name="task_saved">Tarefa salva com sucesso!</string>

</resources>