<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.NewTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:navigationIcon="@drawable/ic_back"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtask_create"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_height="wrap_content"
                android:text="@string/newtask_text_task"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/edit_newtask"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/newtask_hint"
                android:paddingStart="12dp"
                android:textColor="@color/app_default"
                android:textColorHint="@color/app_default"
                android:autofillHints=""
                tools:ignore="RtlSymmetry"
                android:inputType="text" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_marginTop="36dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/opt_todo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    app:buttonTint="@color/white"
                    android:text="@string/tab_todo"
                    android:textColor="@color/white"
                    android:textColorLink="#FFFFFF" />
                <RadioButton
                    android:id="@+id/opt_doing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_doing"
                    android:textColor="@color/white"
                    app:buttonTint="@color/white"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/opt_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:buttonTint="@color/white"
                    android:text="@string/tab_done"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_createtask"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/bg_edit_text"
                android:text="@string/newtask_create"
                android:textAllCaps="true"
                android:textColor="@color/app_default"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>