<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RecoverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:layout_marginTop="22dp"
                android:textColor="@color/white"
                android:text="@string/text_recover_mensage"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_email_login"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/recover_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_email_login"
                android:paddingStart="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/app_default" />

            <Button
                android:id="@+id/btn_recover"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_edit_text"
                android:text="@string/recover_email"
                android:textAllCaps="true"
                android:textColor="@color/app_default"
                app:backgroundTint="@null" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>